# nerv_pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  config.ini  config.txt  dependencies.h  imgui.ini  init.bat  log.txt  main.cpp  nerv_engine.rar  nerv_engine.sln  nerv_engine.vcxproj  nerv_engine.vcxproj.filters
Dependencies/openGL/include/glad/: glad.h
Dependencies/openGL/src/: glad.c
dependencies/openGL/: CMakeLists.txt
shader/: basic.frag.glsl  basic.vert.glsl  blue.frag.glsl  bvh.glsl  commun.glsl  data.glsl  hit.glsl  postprocess.frag.glsl  raytraced.frag.glsl  static.vert.glsl  test.include.glsl
src/: bvh.cpp  bvh.h  camera.cpp  camera.h  commun.cpp  commun.h  config.cpp  config.h  data.cpp  data.h  engine.h  primitive.cpp  primitive.h  shader.cpp  shader.h  ui.cpp  ui.h  window.cpp  window.h
src/config/: config.cpp  config.h
src/engine/: BVH.cpp  BVH.h  render.cpp  render.h  scene.cpp  scene.h  ui.cpp  ui.h
src/engine/material/: framebuffer.cpp  framebuffer.h  material.cpp  material.h  shader.cpp  shader.h  texture.cpp  texture.h
src/engine/object/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  object.cpp  object.h  primitive.cpp  primitive.h  texture.cpp  texture.h  transform.cpp  transform.h
src/engine/shader/: shader.cpp  shader.h
src/env/init/: init.cpp  init.h
src/in_out/: file.cpp  file.h
src/in_out/input/: keyboard.cpp  keyboard.h
src/in_out/windows/: windows.cpp  windows.h
